
[Test_filterResults/filter_everything - 1]
{
  "results": [],
  "experimental_config": {
    "licenses": {
      "summary": false,
      "allowlist": null
    }
  }
}
---

[Test_filterResults/filter_nothing - 1]
{
  "results": [
    {
      "source": {
        "path": "testdata/filter/none/configs/a/",
        "type": "lockfile"
      },
      "packages": [
        {
          "groups": [
            {
              "ids": [
                "GHSA-mc8h-8q98-g5hr",
                "RUSTSEC-2023-0018"
              ],
              "aliases": [
                "GHSA-mc8h-8q98-g5hr",
                "RUSTSEC-2023-0018"
              ],
              "max_severity": ""
            }
          ],
          "package": {
            "name": "remove_dir_all",
            "version": "0.5.3",
            "ecosystem": "crates.io"
          },
          "vulnerabilities": [
            {
              "affected": [
                {
                  "database_specific": {
                    "source": "https://github.com/github/advisory-database/blob/main/advisories/github-reviewed/2023/02/GHSA-mc8h-8q98-g5hr/GHSA-mc8h-8q98-g5hr.json"
                  },
                  "package": {
                    "ecosystem": "crates.io",
                    "name": "remove_dir_all",
                    "purl": "pkg:cargo/remove_dir_all"
                  },
                  "ranges": [
                    {
                      "events": [
                        {
                          "introduced": "0"
                        },
                        {
                          "fixed": "0.8.0"
                        }
                      ],
                      "type": "SEMVER"
                    }
                  ]
                }
              ],
              "database_specific": {
                "cwe_ids": [
                  "CWE-366",
                  "CWE-367"
                ],
                "github_reviewed": true,
                "github_reviewed_at": "2023-02-24T16:23:59Z",
                "nvd_published_at": null,
                "severity": "LOW"
              },
              "details": "The `remove_dir_all` crate is a Rust library that offers additional features over the Rust standard library `fs::remove_dir_all` function. It suffers the same class of failure as the code it was layering over: TOCTOU race conditions, with the ability to cause arbitrary paths to be deleted by substituting a symlink for a path after the type of the path was checked.\n\nThanks to the Rust security team for identifying the problem and alerting us to it.",
              "id": "GHSA-mc8h-8q98-g5hr",
              "modified": "2023-02-24T16:23:59Z",
              "published": "2023-02-24T16:23:59Z",
              "references": [
                {
                  "type": "WEB",
                  "url": "https://github.com/XAMPPRocky/remove_dir_all/security/advisories/GHSA-mc8h-8q98-g5hr"
                },
                {
                  "type": "WEB",
                  "url": "https://github.com/XAMPPRocky/remove_dir_all/commit/7247a8b6ee59fc99bbb69ca6b3ca4bfd8c809ead"
                },
                {
                  "type": "PACKAGE",
                  "url": "https://github.com/XAMPPRocky/remove_dir_all"
                },
                {
                  "type": "WEB",
                  "url": "https://rustsec.org/advisories/RUSTSEC-2023-0018.html"
                }
              ],
              "schema_version": "1.4.0",
              "summary": "Race Condition Enabling Link Following and Time-of-check Time-of-use (TOCTOU) Race Condition in remove_dir_all"
            },
            {
              "affected": [
                {
                  "database_specific": {
                    "categories": [],
                    "cvss": null,
                    "informational": null,
                    "source": "https://github.com/rustsec/advisory-db/blob/osv/crates/RUSTSEC-2023-0018.json"
                  },
                  "ecosystem_specific": {
                    "affects": {
                      "arch": [],
                      "functions": [
                        "remove_dir_all::ensure_empty_dir",
                        "remove_dir_all::remove_dir_all",
                        "remove_dir_all::remove_dir_contents"
                      ],
                      "os": []
                    }
                  },
                  "package": {
                    "ecosystem": "crates.io",
                    "name": "remove_dir_all",
                    "purl": "pkg:cargo/remove_dir_all"
                  },
                  "ranges": [
                    {
                      "events": [
                        {
                          "introduced": "0.0.0-0"
                        },
                        {
                          "fixed": "0.8.0"
                        }
                      ],
                      "type": "SEMVER"
                    }
                  ]
                }
              ],
              "aliases": [
                "GHSA-mc8h-8q98-g5hr"
              ],
              "details": "The remove_dir_all crate is a Rust library that offers additional features over the Rust\nstandard library fs::remove_dir_all function.\n\nIt was possible to trick a privileged process doing a recursive delete in an\nattacker controlled directory into deleting privileged files, on all operating systems.\n\nFor instance, consider deleting a tree called 'etc' in a parent directory\ncalled 'p'. Between calling `remove_dir_all(\"a\")` and remove_dir_all(\"a\")\nactually starting its work, the attacker can move 'p' to 'p-prime', and\nreplace 'p' with a symlink to '/'. Then the privileged process deletes 'p/etc'\nwhich is actually /etc, and now your system is broken. There are some\nmitigations for this exact scenario, such as CWD relative file lookup, but\nthey are not guaranteed - any code using absolute paths will not have that\nprotection in place.\n\nThe same attack could be performed at any point in the directory tree being\ndeleted: if 'a' contains a child directory called 'etc', attacking the\ndeletion by replacing 'a' with a link is possible.\n\nThe new code in this release mitigates the attack within the directory tree\nbeing deleted by using file-handle relative operations: to open 'a/etc', the\npath 'etc' relative to 'a' is opened, where 'a' is represented by a file\ndescriptor (Unix) or handle (Windows). With the exception of the entry points\ninto the directory deletion logic, this is robust against manipulation of the\ndirectory hierarchy, and remove_dir_all will only delete files and directories\ncontained in the tree it is deleting.\n\nThe entry path however is a challenge - as described above, there are some\npotential mitigations, but since using them must be done by the calling code,\nit is hard to be confident about the security properties of the path based\ninterface.\n\nThe new extension trait `RemoveDir` provides an interface where it is much\nharder to get it wrong.\n\n`somedir.remove_dir_contents(\"name-of-child\")`.\n\nCallers can then make their own security evaluation about how to securely get\na directory handle. That is still not particularly obvious, and we're going to\nfollow up with a helper of some sort (probably in the `fs_at` crate). Once\nthat is available, the path based entry points will get deprecated.\n\nIn the interim, processes that might run with elevated privileges should\nfigure out how to securely identify the directory they are going to delete, to\navoid the initial race. Pragmatically, other processes should be fine with the\npath based entry points : this is the same interface `std::fs::remove_dir_all`\noffers, and an unprivileged process running in an attacker controlled\ndirectory can't do anything that the attacker can't already do.",
              "id": "RUSTSEC-2023-0018",
              "modified": "2023-03-04T21:50:30Z",
              "published": "2023-02-24T12:00:00Z",
              "references": [
                {
                  "type": "PACKAGE",
                  "url": "https://crates.io/crates/remove_dir_all"
                },
                {
                  "type": "ADVISORY",
                  "url": "https://rustsec.org/advisories/RUSTSEC-2023-0018.html"
                },
                {
                  "type": "WEB",
                  "url": "https://github.com/XAMPPRocky/remove_dir_all/commit/7247a8b6ee59fc99bbb69ca6b3ca4bfd8c809ead"
                },
                {
                  "type": "ADVISORY",
                  "url": "https://github.com/advisories/GHSA-mc8h-8q98-g5hr"
                }
              ],
              "schema_version": "1.4.0",
              "summary": "Race Condition Enabling Link Following and Time-of-check Time-of-use (TOCTOU)"
            }
          ]
        },
        {
          "groups": [
            {
              "ids": [
                "GHSA-wcg3-cvx6-7396",
                "RUSTSEC-2020-0071"
              ],
              "aliases": [
                "GHSA-wcg3-cvx6-7396",
                "RUSTSEC-2020-0071"
              ],
              "max_severity": ""
            }
          ],
          "package": {
            "name": "time",
            "version": "0.1.45",
            "ecosystem": "crates.io"
          },
          "vulnerabilities": [
            {
              "affected": [
                {
                  "database_specific": {
                    "source": "https://github.com/github/advisory-database/blob/main/advisories/github-reviewed/2021/08/GHSA-wcg3-cvx6-7396/GHSA-wcg3-cvx6-7396.json"
                  },
                  "package": {
                    "ecosystem": "crates.io",
                    "name": "time",
                    "purl": "pkg:cargo/time"
                  },
                  "ranges": [
                    {
                      "events": [
                        {
                          "introduced": "0.1"
                        },
                        {
                          "last_affected": "0.2"
                        }
                      ],
                      "type": "SEMVER"
                    }
                  ]
                },
                {
                  "database_specific": {
                    "source": "https://github.com/github/advisory-database/blob/main/advisories/github-reviewed/2021/08/GHSA-wcg3-cvx6-7396/GHSA-wcg3-cvx6-7396.json"
                  },
                  "ecosystem_specific": {
                    "affected_functions": [
                      "time::UtcOffset::local_offset_at",
                      "time::UtcOffset::try_local_offset_at",
                      "time::UtcOffset::current_local_offset",
                      "time::UtcOffset::try_current_local_offset",
                      "time::OffsetDateTime::now_local",
                      "time::OffsetDateTime::try_now_local"
                    ]
                  },
                  "package": {
                    "ecosystem": "crates.io",
                    "name": "time",
                    "purl": "pkg:cargo/time"
                  },
                  "ranges": [
                    {
                      "events": [
                        {
                          "introduced": "0.2.7"
                        },
                        {
                          "fixed": "0.2.23"
                        }
                      ],
                      "type": "SEMVER"
                    }
                  ]
                }
              ],
              "aliases": [
                "CVE-2020-26235"
              ],
              "database_specific": {
                "cwe_ids": [
                  "CWE-476"
                ],
                "github_reviewed": true,
                "severity": "MODERATE"
              },
              "details": "### Impact\n\nUnix-like operating systems may segfault due to dereferencing a dangling pointer in specific circumstances. This requires an environment variable to be set in a different thread than the affected functions. This may occur without the user's knowledge, notably in a third-party library.\n\nThe affected functions from time 0.2.7 through 0.2.22 are:\n\n- `time::UtcOffset::local_offset_at`\n- `time::UtcOffset::try_local_offset_at`\n- `time::UtcOffset::current_local_offset`\n- `time::UtcOffset::try_current_local_offset`\n- `time::OffsetDateTime::now_local`\n- `time::OffsetDateTime::try_now_local`\n\nThe affected functions in time 0.1 (all versions) are:\n\n- `at`\n- `at_utc`\n- `now`\n\nNon-Unix targets (including Windows and wasm) are unaffected.\n\n### Patches\n\nIn some versions of `time`, the internal method that determines the local offset has been modified to always return `None` on the affected operating systems. This has the effect of returning an `Err` on the `try_*` methods and `UTC` on the non-`try_*` methods. In later versions, `time` will attempt to determine the number of threads running in the process. If the process is single-threaded, the call will proceed as its safety invariant is upheld.\n\nUsers and library authors with time in their dependency tree must perform `cargo update`, which will pull in the updated, unaffected code.\n\nUsers of time 0.1 do not have a patch and must upgrade to an unaffected version: time 0.2.23 or greater or the 0.3 series.\n\n### Workarounds\n\nLibrary authors must ensure that the program only has one running thread at the time of calling any affected method. Binary authors may do the same and/or ensure that no other thread is actively mutating the environment.\n\n### References\n\n[time-rs/time#293](https://github.com/time-rs/time/issues/293).",
              "id": "GHSA-wcg3-cvx6-7396",
              "modified": "2022-12-06T00:16:25Z",
              "published": "2021-08-25T20:56:46Z",
              "references": [
                {
                  "type": "WEB",
                  "url": "https://github.com/time-rs/time/security/advisories/GHSA-wcg3-cvx6-7396"
                },
                {
                  "type": "ADVISORY",
                  "url": "https://nvd.nist.gov/vuln/detail/CVE-2020-26235"
                },
                {
                  "type": "WEB",
                  "url": "https://github.com/time-rs/time/issues/293"
                },
                {
                  "type": "WEB",
                  "url": "https://crates.io/crates/time/0.2.23"
                },
                {
                  "type": "PACKAGE",
                  "url": "https://github.com/time-rs/time"
                },
                {
                  "type": "WEB",
                  "url": "https://rustsec.org/advisories/RUSTSEC-2020-0071.html"
                }
              ],
              "schema_version": "1.4.0",
              "summary": "Segmentation fault in time"
            },
            {
              "affected": [
                {
                  "database_specific": {
                    "categories": [
                      "code-execution",
                      "memory-corruption"
                    ],
                    "cvss": "CVSS:3.1/AV:L/AC:L/PR:N/UI:N/S:U/C:N/I:N/A:H",
                    "informational": null,
                    "source": "https://github.com/rustsec/advisory-db/blob/osv/crates/RUSTSEC-2020-0071.json"
                  },
                  "ecosystem_specific": {
                    "affects": {
                      "arch": [],
                      "functions": [
                        "time::OffsetDateTime::now_local",
                        "time::OffsetDateTime::try_now_local",
                        "time::UtcOffset::current_local_offset",
                        "time::UtcOffset::local_offset_at",
                        "time::UtcOffset::try_current_local_offset",
                        "time::UtcOffset::try_local_offset_at",
                        "time::at",
                        "time::at_utc",
                        "time::now"
                      ],
                      "os": [
                        "linux",
                        "redox",
                        "solaris",
                        "android",
                        "ios",
                        "macos",
                        "netbsd",
                        "openbsd",
                        "freebsd"
                      ]
                    }
                  },
                  "package": {
                    "ecosystem": "crates.io",
                    "name": "time",
                    "purl": "pkg:cargo/time"
                  },
                  "ranges": [
                    {
                      "events": [
                        {
                          "introduced": "0.0.0-0"
                        },
                        {
                          "fixed": "0.2.0"
                        },
                        {
                          "introduced": "0.2.1-0"
                        },
                        {
                          "fixed": "0.2.1"
                        },
                        {
                          "introduced": "0.2.2-0"
                        },
                        {
                          "fixed": "0.2.2"
                        },
                        {
                          "introduced": "0.2.3-0"
                        },
                        {
                          "fixed": "0.2.3"
                        },
                        {
                          "introduced": "0.2.4-0"
                        },
                        {
                          "fixed": "0.2.4"
                        },
                        {
                          "introduced": "0.2.5-0"
                        },
                        {
                          "fixed": "0.2.5"
                        },
                        {
                          "introduced": "0.2.6-0"
                        },
                        {
                          "fixed": "0.2.6"
                        },
                        {
                          "introduced": "0.2.7-0"
                        },
                        {
                          "fixed": "0.2.23"
                        }
                      ],
                      "type": "SEMVER"
                    }
                  ]
                }
              ],
              "aliases": [
                "CVE-2020-26235"
              ],
              "details": "### Impact\n\nUnix-like operating systems may segfault due to dereferencing a dangling pointer in specific circumstances. This requires an environment variable to be set in a different thread than the affected functions. This may occur without the user's knowledge, notably in a third-party library.\n\nThe affected functions from time 0.2.7 through 0.2.22 are:\n\n- `time::UtcOffset::local_offset_at`\n- `time::UtcOffset::try_local_offset_at`\n- `time::UtcOffset::current_local_offset`\n- `time::UtcOffset::try_current_local_offset`\n- `time::OffsetDateTime::now_local`\n- `time::OffsetDateTime::try_now_local`\n\nThe affected functions in time 0.1 (all versions) are:\n\n- `at`\n- `at_utc`\n- `now`\n\nNon-Unix targets (including Windows and wasm) are unaffected.\n\n### Patches\n\nPending a proper fix, the internal method that determines the local offset has been modified to always return `None` on the affected operating systems. This has the effect of returning an `Err` on the `try_*` methods and `UTC` on the non-`try_*` methods.\n\nUsers and library authors with time in their dependency tree should perform `cargo update`, which will pull in the updated, unaffected code.\n\nUsers of time 0.1 do not have a patch and should upgrade to an unaffected version: time 0.2.23 or greater or the 0.3 series.\n\n### Workarounds\n\nA possible workaround for crates affected through the transitive dependency in `chrono`, is to avoid using the default `oldtime` feature dependency of the `chrono` crate by disabling its `default-features` and manually specifying the required features instead.\n\n#### Examples:\n\n`Cargo.toml`:  \n\n```toml\nchrono = { version = \"0.4\", default-features = false, features = [\"serde\"] }\n```\n\n```toml\nchrono = { version = \"0.4.22\", default-features = false, features = [\"clock\"] }\n```\n\nCommandline:  \n\n```bash\ncargo add chrono --no-default-features -F clock\n```\n\nSources:  \n - [chronotope/chrono#602 (comment)](https://github.com/chronotope/chrono/issues/602#issuecomment-1242149249)  \n - [vityafx/serde-aux#21](https://github.com/vityafx/serde-aux/issues/21)",
              "id": "RUSTSEC-2020-0071",
              "modified": "2023-02-08T15:06:38Z",
              "published": "2020-11-18T12:00:00Z",
              "references": [
                {
                  "type": "PACKAGE",
                  "url": "https://crates.io/crates/time"
                },
                {
                  "type": "ADVISORY",
                  "url": "https://rustsec.org/advisories/RUSTSEC-2020-0071.html"
                },
                {
                  "type": "REPORT",
                  "url": "https://github.com/time-rs/time/issues/293"
                }
              ],
              "schema_version": "1.4.0",
              "summary": "Potential segfault in the time crate"
            }
          ]
        }
      ]
    },
    {
      "source": {
        "path": "testdata/filter/none/configs/b/",
        "type": "lockfile"
      },
      "packages": [
        {
          "groups": [
            {
              "ids": [
                "GHSA-fxg5-wq6x-vr4w",
                "GO-2023-1495"
              ],
              "aliases": [
                "GHSA-fxg5-wq6x-vr4w",
                "GO-2023-1495"
              ],
              "max_severity": ""
            },
            {
              "ids": [
                "GO-2022-1144"
              ],
              "aliases": [
                "GO-2022-1144"
              ],
              "max_severity": ""
            },
            {
              "ids": [
                "GHSA-vvpx-j8f3-3w6h",
                "GO-2023-1571"
              ],
              "aliases": [
                "GHSA-vvpx-j8f3-3w6h",
                "GO-2023-1571"
              ],
              "max_severity": ""
            }
          ],
          "package": {
            "name": "golang.org/x/net",
            "version": "0.1.0",
            "ecosystem": "Go"
          },
          "vulnerabilities": [
            {
              "affected": [
                {
                  "database_specific": {
                    "source": "https://github.com/github/advisory-database/blob/main/advisories/github-reviewed/2023/01/GHSA-fxg5-wq6x-vr4w/GHSA-fxg5-wq6x-vr4w.json"
                  },
                  "package": {
                    "ecosystem": "Go",
                    "name": "golang.org/x/net/http2/h2c",
                    "purl": "pkg:golang/golang.org/x/net/http2/h2c"
                  },
                  "ranges": [
                    {
                      "events": [
                        {
                          "introduced": "0.0.0-20220524220425-1d687d428aca"
                        },
                        {
                          "fixed": "0.1.1-0.20221104162952-702349b0e862"
                        }
                      ],
                      "type": "SEMVER"
                    }
                  ]
                },
                {
                  "database_specific": {
                    "source": "https://github.com/github/advisory-database/blob/main/advisories/github-reviewed/2023/01/GHSA-fxg5-wq6x-vr4w/GHSA-fxg5-wq6x-vr4w.json"
                  },
                  "package": {
                    "ecosystem": "Go",
                    "name": "golang.org/x/net",
                    "purl": "pkg:golang/golang.org/x/net"
                  },
                  "ranges": [
                    {
                      "events": [
                        {
                          "introduced": "0.0.0-20220524220425-1d687d428aca"
                        },
                        {
                          "fixed": "0.1.1-0.20221104162952-702349b0e862"
                        }
                      ],
                      "type": "SEMVER"
                    }
                  ]
                }
              ],
              "aliases": [
                "CVE-2022-41721"
              ],
              "database_specific": {
                "cwe_ids": [
                  "CWE-444"
                ],
                "github_reviewed": true,
                "github_reviewed_at": "2023-01-20T22:40:06Z",
                "nvd_published_at": "2023-01-13T23:15:00Z",
                "severity": "HIGH"
              },
              "details": "A request smuggling attack is possible when using MaxBytesHandler. When using MaxBytesHandler, the body of an HTTP request is not fully consumed. When the server attempts to read HTTP2 frames from the connection, it will instead be reading the body of the HTTP request, which could be attacker-manipulated to represent arbitrary HTTP2 requests.",
              "id": "GHSA-fxg5-wq6x-vr4w",
              "modified": "2023-01-24T18:56:46Z",
              "published": "2023-01-14T00:30:23Z",
              "references": [
                {
                  "type": "ADVISORY",
                  "url": "https://nvd.nist.gov/vuln/detail/CVE-2022-41721"
                },
                {
                  "type": "PACKAGE",
                  "url": "https://cs.opensource.google/go/x/net"
                },
                {
                  "type": "WEB",
                  "url": "https://go.dev/cl/447396"
                },
                {
                  "type": "WEB",
                  "url": "https://go.dev/issue/56352"
                },
                {
                  "type": "WEB",
                  "url": "https://pkg.go.dev/vuln/GO-2023-1495"
                }
              ],
              "schema_version": "1.4.0",
              "summary": "golang.org/x/net/http2/h2c vulnerable to request smuggling attack"
            },
            {
              "affected": [
                {
                  "database_specific": {
                    "source": "https://vuln.go.dev/ID/GO-2023-1495.json",
                    "url": "https://pkg.go.dev/vuln/GO-2023-1495"
                  },
                  "ecosystem_specific": {
                    "imports": [
                      {
                        "path": "golang.org/x/net/http2/h2c",
                        "symbols": [
                          "h2cHandler.ServeHTTP",
                          "h2cUpgrade"
                        ]
                      }
                    ]
                  },
                  "package": {
                    "ecosystem": "Go",
                    "name": "golang.org/x/net",
                    "purl": "pkg:golang/golang.org/x/net"
                  },
                  "ranges": [
                    {
                      "events": [
                        {
                          "introduced": "0.0.0-20220524220425-1d687d428aca"
                        },
                        {
                          "fixed": "0.1.1-0.20221104162952-702349b0e862"
                        }
                      ],
                      "type": "SEMVER"
                    }
                  ]
                }
              ],
              "aliases": [
                "CVE-2022-41721",
                "GHSA-fxg5-wq6x-vr4w"
              ],
              "details": "A request smuggling attack is possible when using MaxBytesHandler.\n\nWhen using MaxBytesHandler, the body of an HTTP request is not fully consumed. When the server attempts to read HTTP2 frames from the connection, it will instead be reading the body of the HTTP request, which could be attacker-manipulated to represent arbitrary HTTP2 requests.",
              "id": "GO-2023-1495",
              "modified": "2023-01-31T21:39:17Z",
              "published": "2023-01-13T22:39:40Z",
              "references": [
                {
                  "type": "REPORT",
                  "url": "https://go.dev/issue/56352"
                },
                {
                  "type": "FIX",
                  "url": "https://go.dev/cl/447396"
                }
              ],
              "schema_version": "1.4.0"
            },
            {
              "affected": [
                {
                  "database_specific": {
                    "source": "https://vuln.go.dev/ID/GO-2022-1144.json",
                    "url": "https://pkg.go.dev/vuln/GO-2022-1144"
                  },
                  "ecosystem_specific": {
                    "imports": [
                      {
                        "path": "net/http",
                        "symbols": [
                          "ListenAndServe",
                          "ListenAndServeTLS",
                          "Serve",
                          "ServeTLS",
                          "Server.ListenAndServe",
                          "Server.ListenAndServeTLS",
                          "Server.Serve",
                          "Server.ServeTLS",
                          "http2Server.ServeConn",
                          "http2serverConn.canonicalHeader"
                        ]
                      }
                    ]
                  },
                  "package": {
                    "ecosystem": "Go",
                    "name": "stdlib",
                    "purl": "pkg:golang/stdlib"
                  },
                  "ranges": [
                    {
                      "events": [
                        {
                          "introduced": "0"
                        },
                        {
                          "fixed": "1.18.9"
                        },
                        {
                          "introduced": "1.19.0"
                        },
                        {
                          "fixed": "1.19.4"
                        }
                      ],
                      "type": "SEMVER"
                    }
                  ]
                },
                {
                  "database_specific": {
                    "source": "https://vuln.go.dev/ID/GO-2022-1144.json",
                    "url": "https://pkg.go.dev/vuln/GO-2022-1144"
                  },
                  "ecosystem_specific": {
                    "imports": [
                      {
                        "path": "golang.org/x/net/http2",
                        "symbols": [
                          "Server.ServeConn",
                          "serverConn.canonicalHeader"
                        ]
                      }
                    ]
                  },
                  "package": {
                    "ecosystem": "Go",
                    "name": "golang.org/x/net",
                    "purl": "pkg:golang/golang.org/x/net"
                  },
                  "ranges": [
                    {
                      "events": [
                        {
                          "introduced": "0"
                        },
                        {
                          "fixed": "0.4.0"
                        }
                      ],
                      "type": "SEMVER"
                    }
                  ]
                }
              ],
              "aliases": [
                "CVE-2022-41717",
                "GHSA-xrjj-mj9h-534m"
              ],
              "details": "An attacker can cause excessive memory growth in a Go server accepting HTTP/2 requests.\n\nHTTP/2 server connections contain a cache of HTTP header keys sent by the client. While the total number of entries in this cache is capped, an attacker sending very large keys can cause the server to allocate approximately 64 MiB per open connection.",
              "id": "GO-2022-1144",
              "modified": "2023-01-31T21:39:15Z",
              "published": "2022-12-08T19:01:21Z",
              "references": [
                {
                  "type": "REPORT",
                  "url": "https://go.dev/issue/56350"
                },
                {
                  "type": "FIX",
                  "url": "https://go.dev/cl/455717"
                },
                {
                  "type": "FIX",
                  "url": "https://go.dev/cl/455635"
                },
                {
                  "type": "WEB",
                  "url": "https://groups.google.com/g/golang-announce/c/L_3rmdT0BMU/m/yZDrXjIiBQAJ"
                }
              ],
              "schema_version": "1.4.0"
            },
            {
              "affected": [
                {
                  "database_specific": {
                    "source": "https://github.com/github/advisory-database/blob/main/advisories/github-reviewed/2023/02/GHSA-vvpx-j8f3-3w6h/GHSA-vvpx-j8f3-3w6h.json"
                  },
                  "package": {
                    "ecosystem": "Go",
                    "name": "golang.org/x/net",
                    "purl": "pkg:golang/golang.org/x/net"
                  },
                  "ranges": [
                    {
                      "events": [
                        {
                          "introduced": "0"
                        },
                        {
                          "fixed": "0.7.0"
                        }
                      ],
                      "type": "SEMVER"
                    }
                  ]
                }
              ],
              "aliases": [
                "CVE-2022-41723"
              ],
              "database_specific": {
                "cwe_ids": [
                  "CWE-400"
                ],
                "github_reviewed": true,
                "github_reviewed_at": "2023-02-17T14:00:02Z",
                "nvd_published_at": "2023-02-28T18:15:00Z",
                "severity": "HIGH"
              },
              "details": "A maliciously crafted HTTP/2 stream could cause excessive CPU consumption in the HPACK decoder, sufficient to cause a denial of service from a small number of small requests.",
              "id": "GHSA-vvpx-j8f3-3w6h",
              "modified": "2023-03-09T21:20:44Z",
              "published": "2023-02-17T14:00:02Z",
              "references": [
                {
                  "type": "ADVISORY",
                  "url": "https://nvd.nist.gov/vuln/detail/CVE-2022-41723"
                },
                {
                  "type": "WEB",
                  "url": "https://go.dev/cl/468135"
                },
                {
                  "type": "WEB",
                  "url": "https://go.dev/cl/468295"
                },
                {
                  "type": "WEB",
                  "url": "https://go.dev/issue/57855"
                },
                {
                  "type": "WEB",
                  "url": "https://groups.google.com/g/golang-announce/c/V0aBFqaFs_E"
                },
                {
                  "type": "WEB",
                  "url": "https://pkg.go.dev/vuln/GO-2023-1571"
                },
                {
                  "type": "WEB",
                  "url": "https://vuln.go.dev/ID/GO-2023-1571.json"
                }
              ],
              "schema_version": "1.4.0",
              "summary": "Uncontrolled Resource Consumption"
            },
            {
              "affected": [
                {
                  "database_specific": {
                    "source": "https://vuln.go.dev/ID/GO-2023-1571.json",
                    "url": "https://pkg.go.dev/vuln/GO-2023-1571"
                  },
                  "ecosystem_specific": {
                    "imports": [
                      {
                        "path": "net/http"
                      }
                    ]
                  },
                  "package": {
                    "ecosystem": "Go",
                    "name": "stdlib",
                    "purl": "pkg:golang/stdlib"
                  },
                  "ranges": [
                    {
                      "events": [
                        {
                          "introduced": "0"
                        },
                        {
                          "fixed": "1.19.6"
                        },
                        {
                          "introduced": "1.20.0"
                        },
                        {
                          "fixed": "1.20.1"
                        }
                      ],
                      "type": "SEMVER"
                    }
                  ]
                },
                {
                  "database_specific": {
                    "source": "https://vuln.go.dev/ID/GO-2023-1571.json",
                    "url": "https://pkg.go.dev/vuln/GO-2023-1571"
                  },
                  "ecosystem_specific": {
                    "imports": [
                      {
                        "path": "golang.org/x/net/http2"
                      },
                      {
                        "path": "golang.org/x/net/http2/hpack",
                        "symbols": [
                          "Decoder.DecodeFull",
                          "Decoder.Write",
                          "Decoder.parseFieldLiteral",
                          "Decoder.readString"
                        ]
                      }
                    ]
                  },
                  "package": {
                    "ecosystem": "Go",
                    "name": "golang.org/x/net",
                    "purl": "pkg:golang/golang.org/x/net"
                  },
                  "ranges": [
                    {
                      "events": [
                        {
                          "introduced": "0"
                        },
                        {
                          "fixed": "0.7.0"
                        }
                      ],
                      "type": "SEMVER"
                    }
                  ]
                }
              ],
              "aliases": [
                "CVE-2022-41723",
                "GHSA-vvpx-j8f3-3w6h"
              ],
              "details": "A maliciously crafted HTTP/2 stream could cause excessive CPU consumption in the HPACK decoder, sufficient to cause a denial of service from a small number of small requests.",
              "id": "GO-2023-1571",
              "modified": "2023-02-22T20:13:12Z",
              "published": "2023-02-16T22:31:36Z",
              "references": [
                {
                  "type": "REPORT",
                  "url": "https://go.dev/issue/57855"
                },
                {
                  "type": "FIX",
                  "url": "https://go.dev/cl/468135"
                },
                {
                  "type": "FIX",
                  "url": "https://go.dev/cl/468295"
                },
                {
                  "type": "WEB",
                  "url": "https://groups.google.com/g/golang-announce/c/V0aBFqaFs_E"
                }
              ],
              "schema_version": "1.4.0"
            }
          ]
        }
      ]
    },
    {
      "source": {
        "path": "testdata/filter/none/configs/c/",
        "type": "lockfile"
      },
      "packages": [
        {
          "groups": [
            {
              "ids": [
                "GHSA-mrrw-grhq-86gf"
              ],
              "aliases": [
                "GHSA-mrrw-grhq-86gf"
              ],
              "max_severity": ""
            },
            {
              "ids": [
                "RUSTSEC-2023-0015"
              ],
              "aliases": [
                "RUSTSEC-2023-0015"
              ],
              "max_severity": ""
            }
          ],
          "package": {
            "name": "ascii",
            "version": "0.8.7",
            "ecosystem": "crates.io"
          },
          "vulnerabilities": [
            {
              "affected": [
                {
                  "database_specific": {
                    "source": "https://github.com/github/advisory-database/blob/main/advisories/github-reviewed/2023/02/GHSA-mrrw-grhq-86gf/GHSA-mrrw-grhq-86gf.json"
                  },
                  "package": {
                    "ecosystem": "crates.io",
                    "name": "ascii",
                    "purl": "pkg:cargo/ascii"
                  },
                  "ranges": [
                    {
                      "events": [
                        {
                          "introduced": "0.6.0"
                        },
                        {
                          "fixed": "0.9.3"
                        }
                      ],
                      "type": "SEMVER"
                    }
                  ]
                }
              ],
              "database_specific": {
                "cwe_ids": [],
                "github_reviewed": true,
                "github_reviewed_at": "2023-02-28T20:30:10Z",
                "nvd_published_at": null,
                "severity": "MODERATE"
              },
              "details": "Affected version of this crate had implementation of `From\u003c\u0026mut AsciiStr\u003e` for `\u0026mut [u8]` and `\u0026mut str`. This can result in out-of-bounds array indexing in safe code.\n\nThe flaw was corrected in commit [8a6c779](https://github.com/tomprogrammer/rust-ascii/pull/63/commits/8a6c7798c202766bd57d70fb8d12739dd68fb9dc) by removing those impls.\n",
              "id": "GHSA-mrrw-grhq-86gf",
              "modified": "2023-02-28T20:30:10Z",
              "published": "2023-02-28T20:30:10Z",
              "references": [
                {
                  "type": "WEB",
                  "url": "https://github.com/tomprogrammer/rust-ascii/issues/64"
                },
                {
                  "type": "WEB",
                  "url": "https://github.com/tomprogrammer/rust-ascii/pull/63/commits/8a6c7798c202766bd57d70fb8d12739dd68fb9dc"
                },
                {
                  "type": "PACKAGE",
                  "url": "https://github.com/tomprogrammer/rust-ascii"
                },
                {
                  "type": "WEB",
                  "url": "https://rustsec.org/advisories/RUSTSEC-2023-0015.html"
                }
              ],
              "schema_version": "1.4.0",
              "summary": "Ascii (crate) allows out-of-bounds array indexing in safe code"
            },
            {
              "affected": [
                {
                  "database_specific": {
                    "categories": [
                      "memory-corruption"
                    ],
                    "cvss": null,
                    "informational": "unsound",
                    "source": "https://github.com/rustsec/advisory-db/blob/osv/crates/RUSTSEC-2023-0015.json"
                  },
                  "ecosystem_specific": {
                    "affects": {
                      "arch": [],
                      "functions": [],
                      "os": []
                    }
                  },
                  "package": {
                    "ecosystem": "crates.io",
                    "name": "ascii",
                    "purl": "pkg:cargo/ascii"
                  },
                  "ranges": [
                    {
                      "events": [
                        {
                          "introduced": "0.6.1-0"
                        },
                        {
                          "fixed": "0.9.3"
                        }
                      ],
                      "type": "SEMVER"
                    }
                  ]
                }
              ],
              "details": "Affected version of this crate had implementation of `From\u003c\u0026mut AsciiStr\u003e` for `\u0026mut [u8]` and `\u0026mut str`. This can result in out-of-bounds array indexing in safe code.\n\nThe flaw was corrected in commit [8a6c779](https://github.com/tomprogrammer/rust-ascii/pull/63/commits/8a6c7798c202766bd57d70fb8d12739dd68fb9dc) by removing those impls.",
              "id": "RUSTSEC-2023-0015",
              "modified": "2023-02-25T15:13:09Z",
              "published": "2023-02-25T12:00:00Z",
              "references": [
                {
                  "type": "PACKAGE",
                  "url": "https://crates.io/crates/ascii"
                },
                {
                  "type": "ADVISORY",
                  "url": "https://rustsec.org/advisories/RUSTSEC-2023-0015.html"
                },
                {
                  "type": "REPORT",
                  "url": "https://github.com/tomprogrammer/rust-ascii/issues/64"
                }
              ],
              "schema_version": "1.4.0",
              "summary": "Ascii allows out-of-bounds array indexing in safe code"
            }
          ]
        },
        {
          "groups": [
            {
              "ids": [
                "GHSA-mc8h-8q98-g5hr",
                "RUSTSEC-2023-0018"
              ],
              "aliases": [
                "GHSA-mc8h-8q98-g5hr",
                "RUSTSEC-2023-0018"
              ],
              "max_severity": ""
            }
          ],
          "package": {
            "name": "remove_dir_all",
            "version": "0.5.3",
            "ecosystem": "crates.io"
          },
          "vulnerabilities": [
            {
              "affected": [
                {
                  "database_specific": {
                    "source": "https://github.com/github/advisory-database/blob/main/advisories/github-reviewed/2023/02/GHSA-mc8h-8q98-g5hr/GHSA-mc8h-8q98-g5hr.json"
                  },
                  "package": {
                    "ecosystem": "crates.io",
                    "name": "remove_dir_all",
                    "purl": "pkg:cargo/remove_dir_all"
                  },
                  "ranges": [
                    {
                      "events": [
                        {
                          "introduced": "0"
                        },
                        {
                          "fixed": "0.8.0"
                        }
                      ],
                      "type": "SEMVER"
                    }
                  ]
                }
              ],
              "database_specific": {
                "cwe_ids": [
                  "CWE-366",
                  "CWE-367"
                ],
                "github_reviewed": true,
                "github_reviewed_at": "2023-02-24T16:23:59Z",
                "nvd_published_at": null,
                "severity": "LOW"
              },
              "details": "The `remove_dir_all` crate is a Rust library that offers additional features over the Rust standard library `fs::remove_dir_all` function. It suffers the same class of failure as the code it was layering over: TOCTOU race conditions, with the ability to cause arbitrary paths to be deleted by substituting a symlink for a path after the type of the path was checked.\n\nThanks to the Rust security team for identifying the problem and alerting us to it.",
              "id": "GHSA-mc8h-8q98-g5hr",
              "modified": "2023-02-24T16:23:59Z",
              "published": "2023-02-24T16:23:59Z",
              "references": [
                {
                  "type": "WEB",
                  "url": "https://github.com/XAMPPRocky/remove_dir_all/security/advisories/GHSA-mc8h-8q98-g5hr"
                },
                {
                  "type": "WEB",
                  "url": "https://github.com/XAMPPRocky/remove_dir_all/commit/7247a8b6ee59fc99bbb69ca6b3ca4bfd8c809ead"
                },
                {
                  "type": "PACKAGE",
                  "url": "https://github.com/XAMPPRocky/remove_dir_all"
                },
                {
                  "type": "WEB",
                  "url": "https://rustsec.org/advisories/RUSTSEC-2023-0018.html"
                }
              ],
              "schema_version": "1.4.0",
              "summary": "Race Condition Enabling Link Following and Time-of-check Time-of-use (TOCTOU) Race Condition in remove_dir_all"
            },
            {
              "affected": [
                {
                  "database_specific": {
                    "categories": [],
                    "cvss": null,
                    "informational": null,
                    "source": "https://github.com/rustsec/advisory-db/blob/osv/crates/RUSTSEC-2023-0018.json"
                  },
                  "ecosystem_specific": {
                    "affects": {
                      "arch": [],
                      "functions": [
                        "remove_dir_all::ensure_empty_dir",
                        "remove_dir_all::remove_dir_all",
                        "remove_dir_all::remove_dir_contents"
                      ],
                      "os": []
                    }
                  },
                  "package": {
                    "ecosystem": "crates.io",
                    "name": "remove_dir_all",
                    "purl": "pkg:cargo/remove_dir_all"
                  },
                  "ranges": [
                    {
                      "events": [
                        {
                          "introduced": "0.0.0-0"
                        },
                        {
                          "fixed": "0.8.0"
                        }
                      ],
                      "type": "SEMVER"
                    }
                  ]
                }
              ],
              "aliases": [
                "GHSA-mc8h-8q98-g5hr"
              ],
              "details": "The remove_dir_all crate is a Rust library that offers additional features over the Rust\nstandard library fs::remove_dir_all function.\n\nIt was possible to trick a privileged process doing a recursive delete in an\nattacker controlled directory into deleting privileged files, on all operating systems.\n\nFor instance, consider deleting a tree called 'etc' in a parent directory\ncalled 'p'. Between calling `remove_dir_all(\"a\")` and remove_dir_all(\"a\")\nactually starting its work, the attacker can move 'p' to 'p-prime', and\nreplace 'p' with a symlink to '/'. Then the privileged process deletes 'p/etc'\nwhich is actually /etc, and now your system is broken. There are some\nmitigations for this exact scenario, such as CWD relative file lookup, but\nthey are not guaranteed - any code using absolute paths will not have that\nprotection in place.\n\nThe same attack could be performed at any point in the directory tree being\ndeleted: if 'a' contains a child directory called 'etc', attacking the\ndeletion by replacing 'a' with a link is possible.\n\nThe new code in this release mitigates the attack within the directory tree\nbeing deleted by using file-handle relative operations: to open 'a/etc', the\npath 'etc' relative to 'a' is opened, where 'a' is represented by a file\ndescriptor (Unix) or handle (Windows). With the exception of the entry points\ninto the directory deletion logic, this is robust against manipulation of the\ndirectory hierarchy, and remove_dir_all will only delete files and directories\ncontained in the tree it is deleting.\n\nThe entry path however is a challenge - as described above, there are some\npotential mitigations, but since using them must be done by the calling code,\nit is hard to be confident about the security properties of the path based\ninterface.\n\nThe new extension trait `RemoveDir` provides an interface where it is much\nharder to get it wrong.\n\n`somedir.remove_dir_contents(\"name-of-child\")`.\n\nCallers can then make their own security evaluation about how to securely get\na directory handle. That is still not particularly obvious, and we're going to\nfollow up with a helper of some sort (probably in the `fs_at` crate). Once\nthat is available, the path based entry points will get deprecated.\n\nIn the interim, processes that might run with elevated privileges should\nfigure out how to securely identify the directory they are going to delete, to\navoid the initial race. Pragmatically, other processes should be fine with the\npath based entry points : this is the same interface `std::fs::remove_dir_all`\noffers, and an unprivileged process running in an attacker controlled\ndirectory can't do anything that the attacker can't already do.",
              "id": "RUSTSEC-2023-0018",
              "modified": "2023-03-04T21:50:30Z",
              "published": "2023-02-24T12:00:00Z",
              "references": [
                {
                  "type": "PACKAGE",
                  "url": "https://crates.io/crates/remove_dir_all"
                },
                {
                  "type": "ADVISORY",
                  "url": "https://rustsec.org/advisories/RUSTSEC-2023-0018.html"
                },
                {
                  "type": "WEB",
                  "url": "https://github.com/XAMPPRocky/remove_dir_all/commit/7247a8b6ee59fc99bbb69ca6b3ca4bfd8c809ead"
                },
                {
                  "type": "ADVISORY",
                  "url": "https://github.com/advisories/GHSA-mc8h-8q98-g5hr"
                }
              ],
              "schema_version": "1.4.0",
              "summary": "Race Condition Enabling Link Following and Time-of-check Time-of-use (TOCTOU)"
            }
          ]
        },
        {
          "groups": [
            {
              "ids": [
                "GHSA-wcg3-cvx6-7396",
                "RUSTSEC-2020-0071"
              ],
              "aliases": [
                "GHSA-wcg3-cvx6-7396",
                "RUSTSEC-2020-0071"
              ],
              "max_severity": ""
            }
          ],
          "package": {
            "name": "time",
            "version": "0.1.45",
            "ecosystem": "crates.io"
          },
          "vulnerabilities": [
            {
              "affected": [
                {
                  "database_specific": {
                    "source": "https://github.com/github/advisory-database/blob/main/advisories/github-reviewed/2021/08/GHSA-wcg3-cvx6-7396/GHSA-wcg3-cvx6-7396.json"
                  },
                  "package": {
                    "ecosystem": "crates.io",
                    "name": "time",
                    "purl": "pkg:cargo/time"
                  },
                  "ranges": [
                    {
                      "events": [
                        {
                          "introduced": "0.1"
                        },
                        {
                          "last_affected": "0.2"
                        }
                      ],
                      "type": "SEMVER"
                    }
                  ]
                },
                {
                  "database_specific": {
                    "source": "https://github.com/github/advisory-database/blob/main/advisories/github-reviewed/2021/08/GHSA-wcg3-cvx6-7396/GHSA-wcg3-cvx6-7396.json"
                  },
                  "ecosystem_specific": {
                    "affected_functions": [
                      "time::UtcOffset::local_offset_at",
                      "time::UtcOffset::try_local_offset_at",
                      "time::UtcOffset::current_local_offset",
                      "time::UtcOffset::try_current_local_offset",
                      "time::OffsetDateTime::now_local",
                      "time::OffsetDateTime::try_now_local"
                    ]
                  },
                  "package": {
                    "ecosystem": "crates.io",
                    "name": "time",
                    "purl": "pkg:cargo/time"
                  },
                  "ranges": [
                    {
                      "events": [
                        {
                          "introduced": "0.2.7"
                        },
                        {
                          "fixed": "0.2.23"
                        }
                      ],
                      "type": "SEMVER"
                    }
                  ]
                }
              ],
              "aliases": [
                "CVE-2020-26235"
              ],
              "database_specific": {
                "cwe_ids": [
                  "CWE-476"
                ],
                "github_reviewed": true,
                "severity": "MODERATE"
              },
              "details": "### Impact\n\nUnix-like operating systems may segfault due to dereferencing a dangling pointer in specific circumstances. This requires an environment variable to be set in a different thread than the affected functions. This may occur without the user's knowledge, notably in a third-party library.\n\nThe affected functions from time 0.2.7 through 0.2.22 are:\n\n- `time::UtcOffset::local_offset_at`\n- `time::UtcOffset::try_local_offset_at`\n- `time::UtcOffset::current_local_offset`\n- `time::UtcOffset::try_current_local_offset`\n- `time::OffsetDateTime::now_local`\n- `time::OffsetDateTime::try_now_local`\n\nThe affected functions in time 0.1 (all versions) are:\n\n- `at`\n- `at_utc`\n- `now`\n\nNon-Unix targets (including Windows and wasm) are unaffected.\n\n### Patches\n\nIn some versions of `time`, the internal method that determines the local offset has been modified to always return `None` on the affected operating systems. This has the effect of returning an `Err` on the `try_*` methods and `UTC` on the non-`try_*` methods. In later versions, `time` will attempt to determine the number of threads running in the process. If the process is single-threaded, the call will proceed as its safety invariant is upheld.\n\nUsers and library authors with time in their dependency tree must perform `cargo update`, which will pull in the updated, unaffected code.\n\nUsers of time 0.1 do not have a patch and must upgrade to an unaffected version: time 0.2.23 or greater or the 0.3 series.\n\n### Workarounds\n\nLibrary authors must ensure that the program only has one running thread at the time of calling any affected method. Binary authors may do the same and/or ensure that no other thread is actively mutating the environment.\n\n### References\n\n[time-rs/time#293](https://github.com/time-rs/time/issues/293).",
              "id": "GHSA-wcg3-cvx6-7396",
              "modified": "2022-12-06T00:16:25Z",
              "published": "2021-08-25T20:56:46Z",
              "references": [
                {
                  "type": "WEB",
                  "url": "https://github.com/time-rs/time/security/advisories/GHSA-wcg3-cvx6-7396"
                },
                {
                  "type": "ADVISORY",
                  "url": "https://nvd.nist.gov/vuln/detail/CVE-2020-26235"
                },
                {
                  "type": "WEB",
                  "url": "https://github.com/time-rs/time/issues/293"
                },
                {
                  "type": "WEB",
                  "url": "https://crates.io/crates/time/0.2.23"
                },
                {
                  "type": "PACKAGE",
                  "url": "https://github.com/time-rs/time"
                },
                {
                  "type": "WEB",
                  "url": "https://rustsec.org/advisories/RUSTSEC-2020-0071.html"
                }
              ],
              "schema_version": "1.4.0",
              "summary": "Segmentation fault in time"
            },
            {
              "affected": [
                {
                  "database_specific": {
                    "categories": [
                      "code-execution",
                      "memory-corruption"
                    ],
                    "cvss": "CVSS:3.1/AV:L/AC:L/PR:N/UI:N/S:U/C:N/I:N/A:H",
                    "informational": null,
                    "source": "https://github.com/rustsec/advisory-db/blob/osv/crates/RUSTSEC-2020-0071.json"
                  },
                  "ecosystem_specific": {
                    "affects": {
                      "arch": [],
                      "functions": [
                        "time::OffsetDateTime::now_local",
                        "time::OffsetDateTime::try_now_local",
                        "time::UtcOffset::current_local_offset",
                        "time::UtcOffset::local_offset_at",
                        "time::UtcOffset::try_current_local_offset",
                        "time::UtcOffset::try_local_offset_at",
                        "time::at",
                        "time::at_utc",
                        "time::now"
                      ],
                      "os": [
                        "linux",
                        "redox",
                        "solaris",
                        "android",
                        "ios",
                        "macos",
                        "netbsd",
                        "openbsd",
                        "freebsd"
                      ]
                    }
                  },
                  "package": {
                    "ecosystem": "crates.io",
                    "name": "time",
                    "purl": "pkg:cargo/time"
                  },
                  "ranges": [
                    {
                      "events": [
                        {
                          "introduced": "0.0.0-0"
                        },
                        {
                          "fixed": "0.2.0"
                        },
                        {
                          "introduced": "0.2.1-0"
                        },
                        {
                          "fixed": "0.2.1"
                        },
                        {
                          "introduced": "0.2.2-0"
                        },
                        {
                          "fixed": "0.2.2"
                        },
                        {
                          "introduced": "0.2.3-0"
                        },
                        {
                          "fixed": "0.2.3"
                        },
                        {
                          "introduced": "0.2.4-0"
                        },
                        {
                          "fixed": "0.2.4"
                        },
                        {
                          "introduced": "0.2.5-0"
                        },
                        {
                          "fixed": "0.2.5"
                        },
                        {
                          "introduced": "0.2.6-0"
                        },
                        {
                          "fixed": "0.2.6"
                        },
                        {
                          "introduced": "0.2.7-0"
                        },
                        {
                          "fixed": "0.2.23"
                        }
                      ],
                      "type": "SEMVER"
                    }
                  ]
                }
              ],
              "aliases": [
                "CVE-2020-26235"
              ],
              "details": "### Impact\n\nUnix-like operating systems may segfault due to dereferencing a dangling pointer in specific circumstances. This requires an environment variable to be set in a different thread than the affected functions. This may occur without the user's knowledge, notably in a third-party library.\n\nThe affected functions from time 0.2.7 through 0.2.22 are:\n\n- `time::UtcOffset::local_offset_at`\n- `time::UtcOffset::try_local_offset_at`\n- `time::UtcOffset::current_local_offset`\n- `time::UtcOffset::try_current_local_offset`\n- `time::OffsetDateTime::now_local`\n- `time::OffsetDateTime::try_now_local`\n\nThe affected functions in time 0.1 (all versions) are:\n\n- `at`\n- `at_utc`\n- `now`\n\nNon-Unix targets (including Windows and wasm) are unaffected.\n\n### Patches\n\nPending a proper fix, the internal method that determines the local offset has been modified to always return `None` on the affected operating systems. This has the effect of returning an `Err` on the `try_*` methods and `UTC` on the non-`try_*` methods.\n\nUsers and library authors with time in their dependency tree should perform `cargo update`, which will pull in the updated, unaffected code.\n\nUsers of time 0.1 do not have a patch and should upgrade to an unaffected version: time 0.2.23 or greater or the 0.3 series.\n\n### Workarounds\n\nA possible workaround for crates affected through the transitive dependency in `chrono`, is to avoid using the default `oldtime` feature dependency of the `chrono` crate by disabling its `default-features` and manually specifying the required features instead.\n\n#### Examples:\n\n`Cargo.toml`:  \n\n```toml\nchrono = { version = \"0.4\", default-features = false, features = [\"serde\"] }\n```\n\n```toml\nchrono = { version = \"0.4.22\", default-features = false, features = [\"clock\"] }\n```\n\nCommandline:  \n\n```bash\ncargo add chrono --no-default-features -F clock\n```\n\nSources:  \n - [chronotope/chrono#602 (comment)](https://github.com/chronotope/chrono/issues/602#issuecomment-1242149249)  \n - [vityafx/serde-aux#21](https://github.com/vityafx/serde-aux/issues/21)",
              "id": "RUSTSEC-2020-0071",
              "modified": "2023-02-08T15:06:38Z",
              "published": "2020-11-18T12:00:00Z",
              "references": [
                {
                  "type": "PACKAGE",
                  "url": "https://crates.io/crates/time"
                },
                {
                  "type": "ADVISORY",
                  "url": "https://rustsec.org/advisories/RUSTSEC-2020-0071.html"
                },
                {
                  "type": "REPORT",
                  "url": "https://github.com/time-rs/time/issues/293"
                }
              ],
              "schema_version": "1.4.0",
              "summary": "Potential segfault in the time crate"
            }
          ]
        }
      ]
    }
  ],
  "experimental_config": {
    "licenses": {
      "summary": false,
      "allowlist": null
    }
  }
}
---

[Test_filterResults/filter_partially - 1]
{
  "results": [
    {
      "source": {
        "path": "testdata/filter/some/configs/a/",
        "type": "lockfile"
      },
      "packages": [
        {
          "groups": [
            {
              "ids": [
                "CVE-2024-1013"
              ],
              "aliases": null,
              "max_severity": ""
            }
          ],
          "package": {
            "name": "unixodbc",
            "version": "2.3.11-2",
            "ecosystem": "Debian:10"
          },
          "vulnerabilities": [
            {
              "affected": [
                {
                  "ecosystem_specific": {
                    "urgency": "unimportant"
                  },
                  "package": {
                    "ecosystem": "Debian:10",
                    "name": "unixodbc"
                  },
                  "ranges": [
                    {
                      "events": [
                        {
                          "introduced": "0"
                        }
                      ],
                      "type": "ECOSYSTEM"
                    }
                  ]
                }
              ],
              "details": "An out-of-bounds stack write flaw was found in unixODBC on 64-bit architectures where the caller has 4 bytes and callee writes 8 bytes. This issue may go unnoticed on little-endian architectures, while big-endian architectures can be broken.",
              "id": "CVE-2024-1013",
              "modified": "2024-03-18T12:38:25Z",
              "published": "2024-03-18T11:15:09Z",
              "references": [
                {
                  "type": "REPORT",
                  "url": "https://bugzilla.redhat.com/show_bug.cgi?id=2260823"
                },
                {
                  "type": "WEB",
                  "url": "https://access.redhat.com/security/cve/CVE-2024-1013"
                },
                {
                  "type": "WEB",
                  "url": "https://github.com/lurcher/unixODBC/pull/157"
                }
              ]
            }
          ]
        },
        {
          "groups": [
            {
              "ids": [
                "CVE-2024-3847"
              ],
              "aliases": null,
              "max_severity": ""
            }
          ],
          "package": {
            "name": "chromium",
            "version": "73.0.3683.75-1",
            "ecosystem": "Debian:10"
          },
          "vulnerabilities": [
            {
              "affected": [
                {
                  "ecosystem_specific": {
                    "urgency": "low"
                  },
                  "package": {
                    "ecosystem": "Debian:10",
                    "name": "chromium"
                  },
                  "ranges": [
                    {
                      "events": [
                        {
                          "introduced": "0"
                        }
                      ],
                      "type": "ECOSYSTEM"
                    }
                  ]
                },
                {
                  "ecosystem_specific": {
                    "urgency": "low"
                  },
                  "package": {
                    "ecosystem": "Debian:11",
                    "name": "chromium"
                  },
                  "ranges": [
                    {
                      "events": [
                        {
                          "introduced": "0"
                        }
                      ],
                      "type": "ECOSYSTEM"
                    }
                  ]
                }
              ],
              "details": "Insufficient policy enforcement in WebUI in Google Chrome prior to 124.0.6367.60 allowed a remote attacker to bypass content security policy via a crafted HTML page. (Chromium security severity: Low)",
              "id": "CVE-2024-3847",
              "modified": "2024-05-03T03:16:29Z",
              "published": "2024-04-17T08:15:10Z",
              "references": [
                {
                  "type": "ARTICLE",
                  "url": "https://chromereleases.googleblog.com/2024/04/stable-channel-update-for-desktop_16.html"
                },
                {
                  "type": "WEB",
                  "url": "https://issues.chromium.org/issues/328690293"
                },
                {
                  "type": "WEB",
                  "url": "https://lists.fedoraproject.org/archives/list/package-announce@lists.fedoraproject.org/message/CWIVXXSVO5VB3NAZVFJ7CWVBN6W2735T/"
                },
                {
                  "type": "WEB",
                  "url": "https://lists.fedoraproject.org/archives/list/package-announce@lists.fedoraproject.org/message/IDLUD644WEWGOFKMZWC2K7Z4CQOKQYR7/"
                },
                {
                  "type": "WEB",
                  "url": "https://lists.fedoraproject.org/archives/list/package-announce@lists.fedoraproject.org/message/M4PCXKCOVBUUU6GOSN46DCPI4HMER3PJ/"
                },
                {
                  "type": "WEB",
                  "url": "https://lists.fedoraproject.org/archives/list/package-announce@lists.fedoraproject.org/message/PCWPUBGTBNT4EW32YNZMRIPB3Y4R6XL6/"
                },
                {
                  "type": "WEB",
                  "url": "https://lists.fedoraproject.org/archives/list/package-announce@lists.fedoraproject.org/message/UOC3HLIZCGMIJLJ6LME5UWUUIFLXEGRN/"
                },
                {
                  "type": "WEB",
                  "url": "https://lists.fedoraproject.org/archives/list/package-announce@lists.fedoraproject.org/message/WEP5NJUWMDRLDQUKU4LFDUHF5PCYAPIO/"
                }
              ]
            }
          ]
        }
      ]
    },
    {
      "source": {
        "path": "testdata/filter/some/configs/b/",
        "type": "lockfile"
      },
      "packages": [
        {
          "groups": [
            {
              "ids": [
                "GHSA-vvpx-j8f3-3w6h",
                "GO-2023-1571"
              ],
              "aliases": [
                "GHSA-vvpx-j8f3-3w6h",
                "GO-2023-1571"
              ],
              "max_severity": ""
            }
          ],
          "package": {
            "name": "golang.org/x/net",
            "version": "0.1.0",
            "ecosystem": "Go"
          },
          "vulnerabilities": [
            {
              "affected": [
                {
                  "database_specific": {
                    "source": "https://github.com/github/advisory-database/blob/main/advisories/github-reviewed/2023/02/GHSA-vvpx-j8f3-3w6h/GHSA-vvpx-j8f3-3w6h.json"
                  },
                  "ecosystem_specific": {
                    "urgency": "unimportant"
                  },
                  "package": {
                    "ecosystem": "Go",
                    "name": "golang.org/x/net",
                    "purl": "pkg:golang/golang.org/x/net"
                  },
                  "ranges": [
                    {
                      "events": [
                        {
                          "introduced": "0"
                        },
                        {
                          "fixed": "0.7.0"
                        }
                      ],
                      "type": "SEMVER"
                    }
                  ]
                }
              ],
              "aliases": [
                "CVE-2022-41723"
              ],
              "database_specific": {
                "cwe_ids": [
                  "CWE-400"
                ],
                "github_reviewed": true,
                "github_reviewed_at": "2023-02-17T14:00:02Z",
                "nvd_published_at": "2023-02-28T18:15:00Z",
                "severity": "HIGH"
              },
              "details": "A maliciously crafted HTTP/2 stream could cause excessive CPU consumption in the HPACK decoder, sufficient to cause a denial of service from a small number of small requests.",
              "id": "GHSA-vvpx-j8f3-3w6h",
              "modified": "2023-03-09T21:20:44Z",
              "published": "2023-02-17T14:00:02Z",
              "references": [
                {
                  "type": "ADVISORY",
                  "url": "https://nvd.nist.gov/vuln/detail/CVE-2022-41723"
                },
                {
                  "type": "WEB",
                  "url": "https://go.dev/cl/468135"
                },
                {
                  "type": "WEB",
                  "url": "https://go.dev/cl/468295"
                },
                {
                  "type": "WEB",
                  "url": "https://go.dev/issue/57855"
                },
                {
                  "type": "WEB",
                  "url": "https://groups.google.com/g/golang-announce/c/V0aBFqaFs_E"
                },
                {
                  "type": "WEB",
                  "url": "https://pkg.go.dev/vuln/GO-2023-1571"
                },
                {
                  "type": "WEB",
                  "url": "https://vuln.go.dev/ID/GO-2023-1571.json"
                }
              ],
              "schema_version": "1.4.0",
              "summary": "Uncontrolled Resource Consumption"
            },
            {
              "affected": [
                {
                  "database_specific": {
                    "source": "https://vuln.go.dev/ID/GO-2023-1571.json",
                    "url": "https://pkg.go.dev/vuln/GO-2023-1571"
                  },
                  "ecosystem_specific": {
                    "imports": [
                      {
                        "path": "net/http"
                      }
                    ],
                    "urgency": "low"
                  },
                  "package": {
                    "ecosystem": "Go",
                    "name": "stdlib",
                    "purl": "pkg:golang/stdlib"
                  },
                  "ranges": [
                    {
                      "events": [
                        {
                          "introduced": "0"
                        },
                        {
                          "fixed": "1.19.6"
                        },
                        {
                          "introduced": "1.20.0"
                        },
                        {
                          "fixed": "1.20.1"
                        }
                      ],
                      "type": "SEMVER"
                    }
                  ]
                },
                {
                  "database_specific": {
                    "source": "https://vuln.go.dev/ID/GO-2023-1571.json",
                    "url": "https://pkg.go.dev/vuln/GO-2023-1571"
                  },
                  "ecosystem_specific": {
                    "imports": [
                      {
                        "path": "golang.org/x/net/http2"
                      },
                      {
                        "path": "golang.org/x/net/http2/hpack",
                        "symbols": [
                          "Decoder.DecodeFull",
                          "Decoder.Write",
                          "Decoder.parseFieldLiteral",
                          "Decoder.readString"
                        ]
                      }
                    ]
                  },
                  "package": {
                    "ecosystem": "Go",
                    "name": "golang.org/x/net",
                    "purl": "pkg:golang/golang.org/x/net"
                  },
                  "ranges": [
                    {
                      "events": [
                        {
                          "introduced": "0"
                        },
                        {
                          "fixed": "0.7.0"
                        }
                      ],
                      "type": "SEMVER"
                    }
                  ]
                }
              ],
              "aliases": [
                "CVE-2022-41723",
                "GHSA-vvpx-j8f3-3w6h"
              ],
              "details": "A maliciously crafted HTTP/2 stream could cause excessive CPU consumption in the HPACK decoder, sufficient to cause a denial of service from a small number of small requests.",
              "id": "GO-2023-1571",
              "modified": "2023-02-22T20:13:12Z",
              "published": "2023-02-16T22:31:36Z",
              "references": [
                {
                  "type": "REPORT",
                  "url": "https://go.dev/issue/57855"
                },
                {
                  "type": "FIX",
                  "url": "https://go.dev/cl/468135"
                },
                {
                  "type": "FIX",
                  "url": "https://go.dev/cl/468295"
                },
                {
                  "type": "WEB",
                  "url": "https://groups.google.com/g/golang-announce/c/V0aBFqaFs_E"
                }
              ],
              "schema_version": "1.4.0"
            }
          ]
        }
      ]
    },
    {
      "source": {
        "path": "testdata/filter/some/configs/c/",
        "type": "lockfile"
      },
      "packages": [
        {
          "groups": [
            {
              "ids": [
                "GHSA-mrrw-grhq-86gf"
              ],
              "aliases": [
                "GHSA-mrrw-grhq-86gf"
              ],
              "max_severity": ""
            }
          ],
          "package": {
            "name": "ascii",
            "version": "0.8.7",
            "ecosystem": "crates.io"
          },
          "vulnerabilities": [
            {
              "affected": [
                {
                  "database_specific": {
                    "source": "https://github.com/github/advisory-database/blob/main/advisories/github-reviewed/2023/02/GHSA-mrrw-grhq-86gf/GHSA-mrrw-grhq-86gf.json"
                  },
                  "package": {
                    "ecosystem": "crates.io",
                    "name": "ascii",
                    "purl": "pkg:cargo/ascii"
                  },
                  "ranges": [
                    {
                      "events": [
                        {
                          "introduced": "0.6.0"
                        },
                        {
                          "fixed": "0.9.3"
                        }
                      ],
                      "type": "SEMVER"
                    }
                  ]
                }
              ],
              "database_specific": {
                "cwe_ids": [],
                "github_reviewed": true,
                "github_reviewed_at": "2023-02-28T20:30:10Z",
                "nvd_published_at": null,
                "severity": "MODERATE"
              },
              "details": "Affected version of this crate had implementation of `From\u003c\u0026mut AsciiStr\u003e` for `\u0026mut [u8]` and `\u0026mut str`. This can result in out-of-bounds array indexing in safe code.\n\nThe flaw was corrected in commit [8a6c779](https://github.com/tomprogrammer/rust-ascii/pull/63/commits/8a6c7798c202766bd57d70fb8d12739dd68fb9dc) by removing those impls.\n",
              "id": "GHSA-mrrw-grhq-86gf",
              "modified": "2023-02-28T20:30:10Z",
              "published": "2023-02-28T20:30:10Z",
              "references": [
                {
                  "type": "WEB",
                  "url": "https://github.com/tomprogrammer/rust-ascii/issues/64"
                },
                {
                  "type": "WEB",
                  "url": "https://github.com/tomprogrammer/rust-ascii/pull/63/commits/8a6c7798c202766bd57d70fb8d12739dd68fb9dc"
                },
                {
                  "type": "PACKAGE",
                  "url": "https://github.com/tomprogrammer/rust-ascii"
                },
                {
                  "type": "WEB",
                  "url": "https://rustsec.org/advisories/RUSTSEC-2023-0015.html"
                }
              ],
              "schema_version": "1.4.0",
              "summary": "Ascii (crate) allows out-of-bounds array indexing in safe code"
            }
          ]
        },
        {
          "groups": [
            {
              "ids": [
                "GHSA-wcg3-cvx6-7396",
                "RUSTSEC-2020-0071"
              ],
              "aliases": [
                "GHSA-wcg3-cvx6-7396",
                "RUSTSEC-2020-0071"
              ],
              "max_severity": ""
            }
          ],
          "package": {
            "name": "time",
            "version": "0.1.45",
            "ecosystem": "crates.io"
          },
          "vulnerabilities": [
            {
              "affected": [
                {
                  "database_specific": {
                    "source": "https://github.com/github/advisory-database/blob/main/advisories/github-reviewed/2021/08/GHSA-wcg3-cvx6-7396/GHSA-wcg3-cvx6-7396.json"
                  },
                  "package": {
                    "ecosystem": "crates.io",
                    "name": "time",
                    "purl": "pkg:cargo/time"
                  },
                  "ranges": [
                    {
                      "events": [
                        {
                          "introduced": "0.1"
                        },
                        {
                          "last_affected": "0.2"
                        }
                      ],
                      "type": "SEMVER"
                    }
                  ]
                },
                {
                  "database_specific": {
                    "source": "https://github.com/github/advisory-database/blob/main/advisories/github-reviewed/2021/08/GHSA-wcg3-cvx6-7396/GHSA-wcg3-cvx6-7396.json"
                  },
                  "ecosystem_specific": {
                    "affected_functions": [
                      "time::UtcOffset::local_offset_at",
                      "time::UtcOffset::try_local_offset_at",
                      "time::UtcOffset::current_local_offset",
                      "time::UtcOffset::try_current_local_offset",
                      "time::OffsetDateTime::now_local",
                      "time::OffsetDateTime::try_now_local"
                    ]
                  },
                  "package": {
                    "ecosystem": "crates.io",
                    "name": "time",
                    "purl": "pkg:cargo/time"
                  },
                  "ranges": [
                    {
                      "events": [
                        {
                          "introduced": "0.2.7"
                        },
                        {
                          "fixed": "0.2.23"
                        }
                      ],
                      "type": "SEMVER"
                    }
                  ]
                }
              ],
              "aliases": [
                "CVE-2020-26235"
              ],
              "database_specific": {
                "cwe_ids": [
                  "CWE-476"
                ],
                "github_reviewed": true,
                "severity": "MODERATE"
              },
              "details": "### Impact\n\nUnix-like operating systems may segfault due to dereferencing a dangling pointer in specific circumstances. This requires an environment variable to be set in a different thread than the affected functions. This may occur without the user's knowledge, notably in a third-party library.\n\nThe affected functions from time 0.2.7 through 0.2.22 are:\n\n- `time::UtcOffset::local_offset_at`\n- `time::UtcOffset::try_local_offset_at`\n- `time::UtcOffset::current_local_offset`\n- `time::UtcOffset::try_current_local_offset`\n- `time::OffsetDateTime::now_local`\n- `time::OffsetDateTime::try_now_local`\n\nThe affected functions in time 0.1 (all versions) are:\n\n- `at`\n- `at_utc`\n- `now`\n\nNon-Unix targets (including Windows and wasm) are unaffected.\n\n### Patches\n\nIn some versions of `time`, the internal method that determines the local offset has been modified to always return `None` on the affected operating systems. This has the effect of returning an `Err` on the `try_*` methods and `UTC` on the non-`try_*` methods. In later versions, `time` will attempt to determine the number of threads running in the process. If the process is single-threaded, the call will proceed as its safety invariant is upheld.\n\nUsers and library authors with time in their dependency tree must perform `cargo update`, which will pull in the updated, unaffected code.\n\nUsers of time 0.1 do not have a patch and must upgrade to an unaffected version: time 0.2.23 or greater or the 0.3 series.\n\n### Workarounds\n\nLibrary authors must ensure that the program only has one running thread at the time of calling any affected method. Binary authors may do the same and/or ensure that no other thread is actively mutating the environment.\n\n### References\n\n[time-rs/time#293](https://github.com/time-rs/time/issues/293).",
              "id": "GHSA-wcg3-cvx6-7396",
              "modified": "2022-12-06T00:16:25Z",
              "published": "2021-08-25T20:56:46Z",
              "references": [
                {
                  "type": "WEB",
                  "url": "https://github.com/time-rs/time/security/advisories/GHSA-wcg3-cvx6-7396"
                },
                {
                  "type": "ADVISORY",
                  "url": "https://nvd.nist.gov/vuln/detail/CVE-2020-26235"
                },
                {
                  "type": "WEB",
                  "url": "https://github.com/time-rs/time/issues/293"
                },
                {
                  "type": "WEB",
                  "url": "https://crates.io/crates/time/0.2.23"
                },
                {
                  "type": "PACKAGE",
                  "url": "https://github.com/time-rs/time"
                },
                {
                  "type": "WEB",
                  "url": "https://rustsec.org/advisories/RUSTSEC-2020-0071.html"
                }
              ],
              "schema_version": "1.4.0",
              "summary": "Segmentation fault in time"
            },
            {
              "affected": [
                {
                  "database_specific": {
                    "categories": [
                      "code-execution",
                      "memory-corruption"
                    ],
                    "cvss": "CVSS:3.1/AV:L/AC:L/PR:N/UI:N/S:U/C:N/I:N/A:H",
                    "informational": null,
                    "source": "https://github.com/rustsec/advisory-db/blob/osv/crates/RUSTSEC-2020-0071.json"
                  },
                  "ecosystem_specific": {
                    "affects": {
                      "arch": [],
                      "functions": [
                        "time::OffsetDateTime::now_local",
                        "time::OffsetDateTime::try_now_local",
                        "time::UtcOffset::current_local_offset",
                        "time::UtcOffset::local_offset_at",
                        "time::UtcOffset::try_current_local_offset",
                        "time::UtcOffset::try_local_offset_at",
                        "time::at",
                        "time::at_utc",
                        "time::now"
                      ],
                      "os": [
                        "linux",
                        "redox",
                        "solaris",
                        "android",
                        "ios",
                        "macos",
                        "netbsd",
                        "openbsd",
                        "freebsd"
                      ]
                    }
                  },
                  "package": {
                    "ecosystem": "crates.io",
                    "name": "time",
                    "purl": "pkg:cargo/time"
                  },
                  "ranges": [
                    {
                      "events": [
                        {
                          "introduced": "0.0.0-0"
                        },
                        {
                          "fixed": "0.2.0"
                        },
                        {
                          "introduced": "0.2.1-0"
                        },
                        {
                          "fixed": "0.2.1"
                        },
                        {
                          "introduced": "0.2.2-0"
                        },
                        {
                          "fixed": "0.2.2"
                        },
                        {
                          "introduced": "0.2.3-0"
                        },
                        {
                          "fixed": "0.2.3"
                        },
                        {
                          "introduced": "0.2.4-0"
                        },
                        {
                          "fixed": "0.2.4"
                        },
                        {
                          "introduced": "0.2.5-0"
                        },
                        {
                          "fixed": "0.2.5"
                        },
                        {
                          "introduced": "0.2.6-0"
                        },
                        {
                          "fixed": "0.2.6"
                        },
                        {
                          "introduced": "0.2.7-0"
                        },
                        {
                          "fixed": "0.2.23"
                        }
                      ],
                      "type": "SEMVER"
                    }
                  ]
                }
              ],
              "aliases": [
                "CVE-2020-26235"
              ],
              "details": "### Impact\n\nUnix-like operating systems may segfault due to dereferencing a dangling pointer in specific circumstances. This requires an environment variable to be set in a different thread than the affected functions. This may occur without the user's knowledge, notably in a third-party library.\n\nThe affected functions from time 0.2.7 through 0.2.22 are:\n\n- `time::UtcOffset::local_offset_at`\n- `time::UtcOffset::try_local_offset_at`\n- `time::UtcOffset::current_local_offset`\n- `time::UtcOffset::try_current_local_offset`\n- `time::OffsetDateTime::now_local`\n- `time::OffsetDateTime::try_now_local`\n\nThe affected functions in time 0.1 (all versions) are:\n\n- `at`\n- `at_utc`\n- `now`\n\nNon-Unix targets (including Windows and wasm) are unaffected.\n\n### Patches\n\nPending a proper fix, the internal method that determines the local offset has been modified to always return `None` on the affected operating systems. This has the effect of returning an `Err` on the `try_*` methods and `UTC` on the non-`try_*` methods.\n\nUsers and library authors with time in their dependency tree should perform `cargo update`, which will pull in the updated, unaffected code.\n\nUsers of time 0.1 do not have a patch and should upgrade to an unaffected version: time 0.2.23 or greater or the 0.3 series.\n\n### Workarounds\n\nA possible workaround for crates affected through the transitive dependency in `chrono`, is to avoid using the default `oldtime` feature dependency of the `chrono` crate by disabling its `default-features` and manually specifying the required features instead.\n\n#### Examples:\n\n`Cargo.toml`:  \n\n```toml\nchrono = { version = \"0.4\", default-features = false, features = [\"serde\"] }\n```\n\n```toml\nchrono = { version = \"0.4.22\", default-features = false, features = [\"clock\"] }\n```\n\nCommandline:  \n\n```bash\ncargo add chrono --no-default-features -F clock\n```\n\nSources:  \n - [chronotope/chrono#602 (comment)](https://github.com/chronotope/chrono/issues/602#issuecomment-1242149249)  \n - [vityafx/serde-aux#21](https://github.com/vityafx/serde-aux/issues/21)",
              "id": "RUSTSEC-2020-0071",
              "modified": "2023-02-08T15:06:38Z",
              "published": "2020-11-18T12:00:00Z",
              "references": [
                {
                  "type": "PACKAGE",
                  "url": "https://crates.io/crates/time"
                },
                {
                  "type": "ADVISORY",
                  "url": "https://rustsec.org/advisories/RUSTSEC-2020-0071.html"
                },
                {
                  "type": "REPORT",
                  "url": "https://github.com/time-rs/time/issues/293"
                }
              ],
              "schema_version": "1.4.0",
              "summary": "Potential segfault in the time crate"
            }
          ]
        }
      ]
    }
  ],
  "experimental_config": {
    "licenses": {
      "summary": false,
      "allowlist": null
    }
  }
}
---
